--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Fourple</title>
+        <title>Night Falls</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,14 +21,14 @@
 
         <!-- Add your site or application content here -->
 		<div class="container">
-		<div id="tutorial"><h1>Fourple</h1>
-		<p>Use the left joystick to move. Hold down the 'A' button, which will let you collect the colored squares. Try to match the walls, by collecting the right colors. Once you've gotten the right color, touch the matching wall, and it will disappear. Then, release the 'A' button to release the squares.</p><p>Once you've removed all the walls, you win!</p>
-		<a id="start" href="game.html">Start</a> <a id="restart" href="leaderboard.html">Leaderboard</a>
+		<div id="tutorial"><h1>Placeholder</h1>
 		</div>
 		</div>
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-
+		<script src="js/vendor/phaser.js"></script>
+		<script src="js/vendor/lodash.core.js"></script>
+		<script src="js/main.js"></script>
     </body>
 </html>
