--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <!-- Add your site or application content here -->
 		<div class="container">
-		<div id="tutorial"><h1>Placeholder</h1>
+		<div id="tutorial"><h1></h1>
 		</div>
 		</div>
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
