--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 		<script src="js/vendor/phaser.js"></script>
 		<script src="js/vendor/lodash.core.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/day.js"></script>
+		<script src="js/water.js"></script>
+		<script>game.state.add('day', main.day);
+		game.state.add('water', main.water);
+				game.state.start('water');</script>
     </body>
 </html>
