--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 		<script src="js/water.js"></script>
 		<script>game.state.add('day', main.day);
 		game.state.add('water', main.water);
-				game.state.start('water');</script>
+				game.state.start('day');</script>
     </body>
 </html>
