--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Night Falls</title>
+        <title>Nightfall</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,8 +31,9 @@
 		<script src="js/vendor/lodash.core.js"></script>
 		<script src="js/main.js"></script>
 		<script>
+            game.state.add('start', main.start);
 			game.state.add('level', main.level);
-			game.state.start('level');
+			game.state.start('start');
 		</script>
     </body>
 </html>
